--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
             <h3>Soldier of Army Staff</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web
-                Development
-                Hero.</p>
+                That's why I am learning and mastering the army. I will not stop until I become the soldier of fortune
+                hero.
+            </p>
             <a class="link-button" target="blank" href="https://www.facebook.com/tarzen.topu">Contact me</a>
         </div>
         <div class="half-width">
             <img src="267975338_454987609587350_5047633168823241315_n-removebg-preview.png" alt="">
         </div>
+
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="1000w_q95-removebg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1><span class="red">Dream</span> Big</h1>
+            <h3>Become an Officer</h3>
+            <p>To rule the country, become an commissioned Officer</p>
+            <a class="link-button" target="blank" href="https://www.army.mil.bd/">Learn More About Army</a>
+
+        </div>
+
     </section>
 </body>
 
